Production - Fix kube-vip config on VLAN

--- a/production/ansible/roles/ha/kube-vip/templates/kube-vip-arp-ds.yaml.j2
+++ b/production/ansible/roles/ha/kube-vip/templates/kube-vip-arp-ds.yaml.j2
@@ -36,6 +36,8 @@ spec:
           value: "true"
         - name: port
           value: "6443"
+        - name: vip_interface
+          value: "{{ kube_vip_interface }}"
         - name: vip_cidr
           value: "{{ kube_vip_cidr }}"
         - name: cp_enable
